set the neon h1 to set heights on desktop and mobile. removed font-wrap from desktop view so that the layout shift would stop happening

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -3,7 +3,7 @@
   line-height: 1.2;
   font-weight: 800;
   letter-spacing: -0.05rem;
-  margin: 1rem 0 .5rem 0;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .headingXl {
@@ -11,7 +11,7 @@
   line-height: 1.3;
   font-weight: 800;
   letter-spacing: -0.05rem;
-  margin: 1rem 0 .5rem 0;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .headingLg {
@@ -151,19 +151,21 @@ ul.linkNavUl {
   list-style-type: none;
 }
 
-.linkNavUl > li{
+.linkNavUl > li {
   margin: auto;
-} 
+}
 
 @font-face {
   font-family: neon;
-  src: url(hello-denver-display/hellodenverdisplayregular_v1.6.ttf);
+  src: local('Roboto'),
+    url(hello-denver-display/hellodenverdisplayregular_v1.6.ttf);
   font-display: swap;
 }
 .neonDiv {
   margin: 0 0 0 0;
   padding: 0;
   display: inline;
+  height: 144px;
 }
 .neonDiv2 {
   margin: 0 0 0 0;
@@ -178,7 +180,6 @@ ul.linkNavUl {
   line-height: 1em;
   justify-content: center;
   display: flex;
-  flex-wrap: wrap;
   font-family: neon;
   font-size: 8rem;
   font-weight: 100;
@@ -217,7 +218,7 @@ ul.linkNavUl {
   overflow: hidden;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
   .headingXl {
     font-size: 1rem;
   }
@@ -225,6 +226,7 @@ ul.linkNavUl {
     font-size: 30px;
   }
   .neonText2 h1 {
+    flex-wrap: wrap;
     font-size: 6rem;
     padding: 0 3rem 0 2.5rem;
   }
@@ -232,14 +234,16 @@ ul.linkNavUl {
     font-size: 16px;
     margin: 0 5px;
   }
-
+  .neonDiv {
+    height: 100px;
+  }
   ul.linkNavUl {
     width: 95%;
   }
   .navBar > ul {
     font-size: 14px;
     width: 95%;
-    padding: 20px ;
+    padding: 20px;
     justify-content: space-between;
   }
   .neonText3 {
